--- a/style.css
+++ b/style.css
@@ -2,10 +2,15 @@
     text-align: center;
 }
 
-botoes{
-    background-color:rgb(48, 231, 11) ;
+.botoes{
+    background-color:rgb(231, 11, 11) ;
     border-radius:5px ;
     color:white ;
     font-weight: 500;
     border-color:rgb(11, 26, 230) ;
+}
+
+body{background-color:rgba(61, 109, 230, 0.39) ;
+    color:rgb(165, 74, 74) ; 
+
 }
